# SBX

./: .gitignore  CMakeLists.txt  README.md  SBX.sln
SBX/: Main.cpp  SBX.vcxproj  SBX.vcxproj.filters  Stdafx.h  imgui.ini
SBX/Component/: AccelerationComponent.h  Component.h  ComponentVector.h  ComponentVectors.h  EntityInfoComponenetVector.h  EntityInfoComponent.h  MapComponentVector.h  ModelComponent.h  PastFutureComponentVectors.h  PositionComponent.h  TemplateComponent.h  TimeComponent.h  VecComponentVector.h  VelocityComponent.h
SBX/Log/: Logger.cpp  Logger.h
SBX/Manager/: CommandLineManager.h  EntityManager.cpp  EntityManager.h  Manager.cpp  Manager.h  ManagerVector.cpp  ManagerVector.h  SystemManager.cpp  SystemManager.h
SBX/Render/: Camera.h  IndexBuffer.cpp  IndexBuffer.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RendererStorage.cpp  RendererStorage.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
SBX/Sandbox/: CommandLineParser.h  EntityManager.h  Sandbox.cpp  Sandbox.h
SBX/Scene/: Camera2D.cpp  Camera2D.h  Camera3D.h  Scene.cpp  Scene.h  TestScene.cpp  TestScene.h  UserInput.h
SBX/System/: AccelerationSystem.h  CommandLineSystem.cpp  CommandLineSystem.h  DrawSystem.h  MovementSystem.h  PositionSystem.h  RenderSystem.h  SubSystem.cpp  SubSystem.h  System.cpp  System.h  SystemVector.cpp  SystemVector.h  TemplateSystem.cpp  TemplateSystem.h  TestSystem.cpp  TestSystem.h  TimeSystem.cpp  TimeSystem.h  VelocitySystem.h
SBX/Utils/: MathUtils.h  (+2 more)
src/: Stdafx.h
(+182 files in other folders)
